12/22/12 set initial guess for GTL and MTE challenges in a more general way
12/22/12 add slope manipulator for dissimilar line forms
12/22/12 throw exception if an unsupported LineForm or ManipulationMode is encountered
12/22/12 consolidate all game view elements in one package
12/22/12 collapse GTL view hierarchy to 1 primary node and 4 graphs by consulting challenge.lineForm and challenge.manipulationMode
12/22/12 collapse GTL view hierarchy by consulting challenge.lineForm
12/22/12 collapse MTE view hierarchy to 2 nodes by consulting challenge.lineForm and challenge.manipulationMode
12/22/12 collapse MTE view hierarchy by consulting challenge.lineForm
12/22/12 move duplicate code into MTE_ChallengeNode base class
12/22/12 use PointSlopeLineNode throughout MTE challenges, because we don't show the equation on graphed lines
12/22/12 use PointSlopeLineNode throughout GTL challenges, because we don't show the equation on graphed lines
12/22/12 simplify GTL_GraphNode interface, don't need separate methods for creating answer and guess line nodes
12/22/12 fix RewardNode.setLevel so that we have a perfect-score reward for all levels
12/22/12 consolidate all game-model elements in one package
12/22/12 flatten MTE_Challenge hierarchy to one class (model for "Make the Equation" challenges)
12/22/12 flatten GTL_Challenge hierarchy to one class (model for "Graph the Line" challenges)
# 0.00.44 (71398) Dec 21, 2012
12/21/12 demonstrate "Place the Points" challenges for Game
12/21/12 simplify implementation of P3P challenges to 3 classes
12/21/12 add LineForm enum to game model
12/21/12 fix fractional y-intercepts in P3P challenges
12/21/12 a bit more refactoring of P3P view, to eliminate some duplicate code
12/21/12 refactor P3P challenges, move functionality to base classes, add support for slope-intercept
12/21/12 remove assertion from SlopeInterceptLineNode that disallows fractional y-intercept
12/21/12 prevent points from overlapping in "Place 3 Points" challenges